# Typing-Test

./: Main.java  README.md  pyproject.toml  typingtest.py
typing_test/: typingtest.py
