[tool.poetry]
name = "typing-test"
version = "0.1.0"
description = ""
authors = ["Michael Ye <michaelye48@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
typingtest = 'typing_test.typingtest:main'


[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
